# Static_Mexanic

./: !ReadMe.txt  CMakeLists.txt  main.cpp  static.cpp
include/: project_type.hpp  vector_evklid.cpp  vector_evklid.hpp
include/integral_lib/: Integral.hpp  Integral_identify.hpp  Integral_improper.hpp
include/potencial_lib/: energy.hpp  energy_v1.cpp  energy_v1.hpp  potencial.hpp  potencial_grav.cpp  potencial_grav.hpp
include/rho_lib/: rho.cpp  rho.hpp  rho_Bolcman.cpp  rho_Bolcman.hpp  rho_Fermi.cpp  rho_Fermi.hpp  rho_Macsvel.cpp  rho_Macsvel.hpp
